--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </header>
 
-    <body>
+    <main>
         <img class="banner" src="assets/Banner Prepara Cascavel.jpg" alt="">
 
         <div class="projeto">
@@ -34,12 +34,12 @@
                     <p>Prepara ENEM 2025!</p>
 
                     
-                    <a href="https://padraoenem.com.br/login"><button>Assistir aulas!</button></a>
+                    <a href="https://padraoenem.com.br/login"><button>Assistir aulas! ⮕</button></a>
                 </div>
             </div>
         </div>
 
-    </body>
+    </main>
 
     <footer>
 
